# EFM

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/EFM/: FieldMap3D.h++  FieldType.h++
include/EFM/detail/: check_root.h++  has_subscript.h++  is_std_complex.h++  mucify.h++
test/: CMakeLists.txt  FieldMap3D.c++  generate_data.py
